# opencv-samples

./: .gitignore  LICENSE  README.md  run_cmake.sh
android/ObjectTracker/: .cproject  AndroidManifest.xml  project.properties
android/ObjectTracker/jni/: Android.mk  Application.mk  jni_part.cpp
android/ObjectTracker/res/layout/: activity_main.xml
android/ObjectTracker/res/values/: strings.xml
android/ObjectTracker/src/com/example/features/: MainActivity.java
dnn/: Makefile  README.md  feature_extraction.cpp  predict_sample.cpp
dnn/onnx/: read_onnx.py
dnn/other/: Makefile  datasets_test.cpp
dnn/predict/: Makefile  predict_sample.cpp
dnn/train/: Makefile  fileio.cpp  fileio.hpp  main.cpp  train_test.cpp  train_test.hpp
gapi/: CMakeLists.txt  gapi_sample.cpp
imgproc/: CMakeLists.txt  Makefile  lsd_sample.cpp
objdetect/: CMakeLists.txt  qrcode_sample.cpp  qrcode_sample.py
quality/: CMakeLists.txt  Makefile  quality_comparison.py  quality_sample.cpp  quality_sample.py
recognition/: .gitignore  Makefile  feature.cpp  feature.h  main.cpp  recognizer.cpp  recognizer.h
