cmake_minimum_required(VERSION 3.5.1)
set(project quality_sample)
project(${project} CXX)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "-Wall -g")
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(${project} ${project}.cpp)
target_link_libraries(${project} ${OpenCV_LIBRARIES})
